ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiservice-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: develop1.obs-dev.pssobs.net
spec:
  tls:
  - hosts:
    - '*.ngocquach.click'
    secretName: obs-dev-tls
  rules:
  - host: jenkins.ngocquach.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
  # - host: frontend.ngocquach.click
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: frontend-service
  #           port:
  #             number: 80
  # - host: backend.ngocquach.click
  #   http:
  #     paths:
  #     - path: /graphql/v1
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: backend-service
  #           port:
  #             number: 8080
