ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ioms-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - develop1.obs-dev.pssobs.net
    - prod1.obs-dev.pssobs.net
    secretName: obs-dev-tls  
  rules:
  - host: develop1.obs-dev.pssobs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ioms-web-sit-service  
            port:
              number: 80
  - host: prod1.obs-dev.pssobs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ioms-web-uat-service  
            port:
              number: 80
